# ROS_Tutorial

./: README.md
centre_detector/: CMakeLists.txt  package.xml
centre_detector/launch/: default.launch
centre_detector/src/: detector_node.cpp
